@@ -88,6 +88,7 @@ __ ../ref/rst/directives.html#document-header-footer
       ``--literal-block-env=lstlistings`` fail with literal or doctest
       blocks nested in an admonition.
 
+* Support symbol footnotes with ``--use-latex-footnotes``.
 
 Backwards compatibility:
   "Bug for bug compatibility" is not provided.
@@ -641,6 +642,12 @@ New Feature:
                ``DUsubtitle`` commands,
   :topic:      ``\DUtopic`` and ``\DUtitle`` commands,
   :transition: ``\DUtransition`` command.
+
+  Auxiliary LaTeX commands
+
+  :footnotes: ``\DUfootnotemark`` and ``\DUfootnotetext`` commands with
+	      hyperlink support and choice of footnotemark format (symbol or
+	      numeric).
 
 Backwards compatibility:
   In most cases, the default definition corresponds to the previously used
