@@ -137,7 +137,9 @@ Changes Since 0.5
   - Typeset generic topic as "quote block with title".
   - Use template (file and configuration option).
   - Render doctest blocks as literal blocks (fixes [ 1586058 ]).
-  - Use .translate() instead of repeated .replace() calls.
+  - Use `translate` instead of repeated `replace` calls for text encoding.
+  - Hyperlinked footnote marks and support for symbol footnotes with
+    ``--use-latex-footnotes``.
 
 * docutils/writers/manpage.py
 
